--- a/index.Rmd
+++ b/index.Rmd
@@ -2,8 +2,6 @@
 title: "My Website"
 ---
 
-Hello, Website!
+Hello!
 
-For more information about simple R Markdown websites, please read the documentation at https://bookdown.org/yihui/rmarkdown/rmarkdown-site.html.
-
-Please also note that simple R Markdown sites are _not_ based on **blogdown**. They are probably good for websites with only a few Rmd documents. For larger-scale and more sophisticated websites (such as blogs), you may want to use **blogdown** instead: https://github.com/rstudio/blogdown.
+My name is Tucker Mackie and I am currently attending Appalachian State University. I graduate this December with a Bachelors degree of Arts and Science with a concentration in Statistics. As I have studied my degree I have picked up many skills in coding and programming. I have become highly proficient in R, proficient in Python, proficient in SQL, highly proficient in Excel. Using these programs I have been able to learn many skills and complete many tests.
